--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
 						<artifactId>spring-restdocs-asciidoctor</artifactId>
 						<version>${spring-restdocs.version}</version>
 					</dependency>
+					<dependency>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring-aspects</artifactId>
+						<version>5.3.13</version>
+					</dependency>							
 				</dependencies>
 			</plugin>
 			<plugin>
