--- a/pom.xml
+++ b/pom.xml
@@ -75,10 +75,14 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
-				<dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
 			<groupId>mysql</groupId>
+
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+
+			<version>8.0.29</version>
+
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -115,7 +119,7 @@
 						<groupId>org.springframework</groupId>
 						<artifactId>spring-aspects</artifactId>
 						<version>5.3.13</version>
-					</dependency>							
+					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
