--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port = 8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sports
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/sports}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:1234}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
